Changed over to F28069, officially.

--- a/ComexDriver/.settings/org.eclipse.core.resources.prefs
+++ b/ComexDriver/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,8 @@ encoding//Debug/F2806x_common/source/subdir_rules.mk=UTF-8
 encoding//Debug/F2806x_common/source/subdir_vars.mk=UTF-8
 encoding//Debug/cmd_f2802x/subdir_rules.mk=UTF-8
 encoding//Debug/cmd_f2802x/subdir_vars.mk=UTF-8
+encoding//Debug/cmd_f2806x/subdir_rules.mk=UTF-8
+encoding//Debug/cmd_f2806x/subdir_vars.mk=UTF-8
 encoding//Debug/f2802x_common/cmd/subdir_rules.mk=UTF-8
 encoding//Debug/f2802x_common/cmd/subdir_vars.mk=UTF-8
 encoding//Debug/f2802x_common/lib/subdir_rules.mk=UTF-8
