--- a/ComexDriver/.settings/org.eclipse.core.resources.prefs
+++ b/ComexDriver/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,8 @@ encoding//Debug/F2806x_common/lib/subdir_rules.mk=UTF-8
 encoding//Debug/F2806x_common/lib/subdir_vars.mk=UTF-8
 encoding//Debug/F2806x_common/source/subdir_rules.mk=UTF-8
 encoding//Debug/F2806x_common/source/subdir_vars.mk=UTF-8
+encoding//Debug/Peripherals/subdir_rules.mk=UTF-8
+encoding//Debug/Peripherals/subdir_vars.mk=UTF-8
 encoding//Debug/cmd_f2802x/subdir_rules.mk=UTF-8
 encoding//Debug/cmd_f2802x/subdir_vars.mk=UTF-8
 encoding//Debug/cmd_f2806x/subdir_rules.mk=UTF-8
